class 1 updated and g2g

--- a/Class 1/Class1_Solved.ipynb
+++ b/Class 1/Class1_Solved.ipynb
@@ -29,8 +29,7 @@
         "1. Introductions\n",
         "2. Laptop Setup\n",
         "3. Break\n",
-        "4. First Steps\n",
-        "5. Group Project Overview & Group Formation"
+        "4. First Steps\n"
       ]
     },
     {
@@ -1417,7 +1416,7 @@
         "jIYp4_aafkvB",
         "-KdvtLQ8fkvB"
       ],
-      "name": "Class1_Solved.ipynb",
+      "name": "Class1_solved.ipynb",
       "provenance": []
     },
     "kernelspec": {
