--- a/Class 1/Class1_unsolved.ipynb
+++ b/Class 1/Class1_unsolved.ipynb
@@ -29,8 +29,7 @@
         "1. Introductions\n",
         "2. Laptop Setup\n",
         "3. Break\n",
-        "4. First Steps\n",
-        "5. Group Project Overview & Group Formation"
+        "4. First Steps\n"
       ]
     },
     {
@@ -315,7 +314,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Hello World\")"
+        ""
       ]
     },
     {
@@ -344,7 +343,7 @@
       },
       "outputs": [],
       "source": [
-        "# print your own message here"
+        ""
       ]
     },
     {
@@ -380,14 +379,7 @@
       },
       "outputs": [],
       "source": [
-        "# a comment\n",
-        "\n",
-        "# we use comments to write down things that we want to rememember\n",
-        "# or instructions for other users that will read/use our code\n",
-        "\n",
-        "# anything after the # is ignored by python.\n",
-        "\n",
-        "print(\"I could have written code like this.\")  # the comment after is ignored"
+        ""
       ]
     },
     {
@@ -407,7 +399,7 @@
       },
       "outputs": [],
       "source": [
-        "# print(\"This won't run.\")"
+        ""
       ]
     },
     {
@@ -463,18 +455,7 @@
         "id": "En3FebQ_fktT"
       },
       "source": [
-        "If you want to write code, you can use the backtick characters: `print(\"Hello World\")`\n",
-        "\n",
-        "Or you can use triple backticks, and can get color coding by specifying the language that you use.\n",
-        "```python\n",
-        "print(\"Hello World\")\n",
-        "```\n",
-        "\n",
-        "```html\n",
-        "<html>\n",
-        "    <body>Hello World!</body>\n",
-        "</html>\n",
-        "```"
+        ""
       ]
     },
     {
@@ -547,84 +528,7 @@
       },
       "outputs": [],
       "source": [
-        "# addition"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GXot6g4Ofkte"
-      },
-      "outputs": [],
-      "source": [
-        "# subtraction"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OgY54yqRfkth"
-      },
-      "outputs": [],
-      "source": [
-        "# negation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "avUzmvtQfktm"
-      },
-      "outputs": [],
-      "source": [
-        "# multiplication"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0KumDBmhfkto"
-      },
-      "outputs": [],
-      "source": [
-        "# division"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "z2FyY3Smfktq"
-      },
-      "outputs": [],
-      "source": [
-        "# integer division"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LfHNm0bafkts"
-      },
-      "outputs": [],
-      "source": [
-        "# modulo"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NxPjmXREfktu"
-      },
-      "outputs": [],
-      "source": [
-        "# power"
+        ""
       ]
     },
     {
@@ -678,22 +582,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "71FCFAAdfktx"
-      },
-      "outputs": [],
-      "source": [
-        "# tip calculated on the pre-tax amount"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "6P_9wIedfktz"
       },
       "outputs": [],
       "source": [
-        "# tip calculated on the after-tax amount"
+        ""
       ]
     },
     {
@@ -711,19 +604,6 @@
       "metadata": {
         "hidden": true,
         "id": "o6nzStcQfkt3",
-        "solution2": "hidden"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "hidden": true,
-        "id": "YgQ96Lb8fkt5",
         "solution2": "hidden"
       },
       "outputs": [],
@@ -768,7 +648,7 @@
       },
       "outputs": [],
       "source": [
-        "# solution here"
+        ""
       ]
     },
     {
@@ -782,17 +662,6 @@
       },
       "source": [
         "# Solution"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "_zIBJ8Uifkt_"
-      },
-      "outputs": [],
-      "source": [
-        ""
       ]
     },
     {
@@ -843,7 +712,7 @@
       },
       "outputs": [],
       "source": [
-        "# solution here"
+        ""
       ]
     },
     {
@@ -905,7 +774,7 @@
       },
       "outputs": [],
       "source": [
-        "# solution here"
+        ""
       ]
     },
     {
@@ -975,7 +844,7 @@
       },
       "outputs": [],
       "source": [
-        "# solution here"
+        ""
       ]
     },
     {
@@ -995,47 +864,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Zi2hvWD6fkuX"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zyIIoAqlfkuZ"
-      },
-      "outputs": [],
-      "source": [
-        "# let’s see how we can print the message in one line\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lH86kkW6fkua"
-      },
-      "outputs": [],
-      "source": [
-        "# let's use int() function to make the output look a bit nicer.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "c1RcJHWEfkuc"
       },
       "outputs": [],
       "source": [
-        "# let's then use the functions int() and round()\n",
-        "\n"
+        ""
       ]
     },
     {
@@ -1087,50 +920,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RNTWi9Zjfkuj"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "W9LjkGr4fkul"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "QcOKM1_wfkun"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zZkDlQaCfkuo"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "0uuH-bnLfkup"
       },
       "outputs": [],
@@ -1145,83 +934,6 @@
       },
       "source": [
         "We will learn more about the different types of variables later, but for now, remember that you can use the `type` command to find out the type of an expression:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cSahfP9lfkus"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MgwrufJgfkut"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "n61GUVtVfkuv"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vVvXNJRGfkuw"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qrVwILnufkuy"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "feejTWGCfkuz"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4b4UuQpsfku3"
-      },
-      "outputs": [],
-      "source": [
-        ""
       ]
     },
     {
