--- a/Class 9 Final/Class9_Solved.ipynb
+++ b/Class 9 Final/Class9_Solved.ipynb
@@ -280,6 +280,18 @@
     {
       "cell_type": "code",
       "source": [
+        "check = pd.read_sql(\"SELECT * FROM irs_nyc_tax_returns LIMIT 3\", con=con)\n",
+        "check"
+      ],
+      "metadata": {
+        "id": "Id1SOoHYNmPW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "nyc_census_data.to_sql(name='nyc_census_data',con=con)"
       ],
       "metadata": {
@@ -291,10 +303,34 @@
     {
       "cell_type": "code",
       "source": [
+        "check = pd.read_sql(\"SELECT * FROM nyc_census_data LIMIT 3\", con=con)\n",
+        "check"
+      ],
+      "metadata": {
+        "id": "8zeNL-7iNrfY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "nyc_film_permits.to_sql(name='nyc_film_permits',con=con)"
       ],
       "metadata": {
         "id": "9cedwyzfpgv5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check = pd.read_sql(\"SELECT * FROM nyc_film_permits LIMIT 3\", con=con)\n",
+        "check"
+      ],
+      "metadata": {
+        "id": "DRWL5-IpNu07"
       },
       "execution_count": null,
       "outputs": []
@@ -350,7 +386,7 @@
     {
       "cell_type": "code",
       "source": [
-        "check = pd.read_sql(\"SELECT * FROM irs_nyc_tax_returns\", con=con)\n",
+        "check = pd.read_sql(\"SELECT * FROM irs_nyc_tax_returns LIMIT 15\", con=con)\n",
         "check"
       ],
       "metadata": {
@@ -374,7 +410,7 @@
     {
       "cell_type": "code",
       "source": [
-        "check = pd.read_sql(\"SELECT year, state, zipcode, return_count FROM irs_nyc_tax_returns\", con=con)\n",
+        "check = pd.read_sql(\"SELECT year, state, zipcode, return_count FROM irs_nyc_tax_returns LIMIT 5\", con=con)\n",
         "check"
       ],
       "metadata": {
@@ -436,7 +472,7 @@
     {
       "cell_type": "code",
       "source": [
-        "check = pd.read_sql(\"SELECT year, state, return_count as 'tax returns' FROM irs_nyc_tax_returns\", con=con)\n",
+        "check = pd.read_sql(\"SELECT year, state, return_count as 'tax returns' FROM irs_nyc_tax_returns LIMIT 5\", con=con)\n",
         "check"
       ],
       "metadata": {
@@ -459,10 +495,23 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "check = pd.read_sql(\"SELECT year, state, return_count as 'tax returns' FROM irs_nyc_tax_returns ORDER BY 'tax returns' ASC\", con=con)\n",
+        "check"
       ],
       "metadata": {
         "id": "A5iDbt4VpyZa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check = pd.read_sql(\"SELECT year, return_count as 'tax returns' FROM irs_nyc_tax_returns ORDER BY year DESC\", con=con)\n",
+        "check"
+      ],
+      "metadata": {
+        "id": "lUw7elzNOWbl"
       },
       "execution_count": null,
       "outputs": []
@@ -619,25 +668,10 @@
       "source": [
         "# Other Operators\n",
         "\n",
-        "`AS` is used to change the name of a column in the result <br> \n",
-        "`DISTINCT` means 'no duplicate rows' <br>\n",
-        "`ORDER BY` lets you sort by column(s) in ascending or descending order <br>\n",
-        "`*` means 'select all columns' <br>\n",
         "`IS NULL` returns rows that have null values for a specified attribute <br>\n",
         "`IS NOT NULL` returns rows that do not have null values for a specified attribute <br>\n",
         "`BETWEEN` returns something like, 'between *this* value and *that* value'\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "_nSb4hfZkxAK"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
